--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A web component wrapper around React Components",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
