--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+  "peerDependencies": {
+    "react": ">=0.14.0",
+    "react-dom": ">=0.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
