--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "web-react-components",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/ChristophP/web-react-components"
+    "type": "git",
+    "url": "https://github.com/ChristophP/web-react-components"
   },
   "version": "0.1.0",
   "description": "A web component wrapper around React Components",
@@ -10,8 +10,13 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"TODO: add tests\"",
+    "lint": "eslint .",
     "prepublish": "npm run build"
+  },
+  "pre-commit": {
+    "run": "lint, test",
+    "silent": true
   },
   "files": [
     "dist/bundle.js"
@@ -24,12 +29,18 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "pre-commit": "^1.2.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
