--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "webpack",
     "test": "echo \"TODO: add tests\"",
     "lint": "eslint .",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "pre-commit": {
     "run": "lint, test",
