--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "test": "echo \"TODO: add tests\"",
-    "lint": "eslint .",
+    "lint": "eslint webpack.config.js src",
     "prepublishOnly": "npm run build"
-  },
-  "pre-commit": {
-    "run": "lint, test",
-    "silent": true
   },
   "files": [
     "dist/bundle.js"
@@ -28,18 +24,18 @@
     "react-dom": ">=0.14.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.1.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "pre-commit": "^1.2.2",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.13.0",
+    "prettier": "^1.17.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
