--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "description": "A web component wrapper around React Components",
   "main": "dist/bundle.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack",
+    "start": "webpack-dev-server --mode=development",
+    "build": "webpack --mode=production",
     "test": "echo \"TODO: add tests\"",
     "lint": "eslint webpack.config.js src",
     "prepublishOnly": "npm run build"
@@ -24,10 +24,9 @@
     "react-dom": ">=0.14.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^6.3.2",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
@@ -36,7 +35,8 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.13.0",
     "prettier": "^1.17.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   }
 }
