add trailing commas

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": ["error", { "trailingComma": "es5" }]
   }
 }
