--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.13.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.17.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
+  },
+  "pre-commit": {
+    "run": "lint, test",
+    "silent": true
   }
 }
